Fix resume full visibility on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -184,8 +184,9 @@ body {
 
   .resume-iframe {
     width: 100%;
-    height: calc(100vh - 7rem);
-    margin-top: 3.5rem;
+    height: calc(100vh - 6rem);
+    margin-top: 2.5rem;
+    display: block;
   }
 
   .resume-overlay-close {
